# claude-conversation-extractor

./: .gitignore  Cargo.toml  README.md
cc-convo/: Cargo.toml
cc-convo/src/: main.rs
docs/context/: claude-jsonl-field-stats.csv  claude-jsonl-schema-inventory.md  claude-jsonl-selected-files.txt  claude-jsonl-type-stats.csv
docs/specs/: cc-convo-cli-spec.md
xtask/: Cargo.toml
xtask/src/: main.rs
