[package]
name = "cc-convo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", default-features = true, features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
indicatif = "0.18.2"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"

